# envcast

./: .gitignore  .pylintrc  Pipfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: default.yml
envcast/: __init__.py  base.py  exceptions.py
envcast/tests/: test_base.py
envget/: __init__.py  base.py  exceptions.py
envget/tests/: test_base.py
