[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "envcast"
module = "envcast"
author = "Denis Anikin"
author-email = "ad@xfenix.ru"
description-file = "README.md"
requires-python=">=3.7"
home-page = "https://github.com/xfenix/envcast/"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.flit.metadata.urls]
Documentation = "https://github.com/xfenix/envcast#envcast"
